--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "chakshu_project_stadiumfc",
+  "homepage": "https://ChakshuVerma.github.io/Stadium-FC-Project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,6 +18,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
