--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chakshu_project_stadiumfc",
-  "homepage": "https://ChakshuVerma.github.io/Stadium-FC-Project",
+  "homepage": "https://ChakshuVerma.github.io/Stadium-Fc-Project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "chart.js": "^3.6.0",
     "d3": "^7.1.1",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.2.0",
     "react-dom": "^17.0.2",
@@ -18,6 +19,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "clean": "rm -rf node_modules/gh-pages/.cache",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
